testdata/baselines/reference/compiler/panicSatisfiesOnExportEqualsDeclaration.errors.txt
panicSatisfiesOnExportEqualsDeclaration.js(2,23): error TS2307: Cannot find module './types' or its corresponding type declarations.


==== types.d.ts (0 errors) ====
    export interface SupportVersionTraceMap {}
    
==== panicSatisfiesOnExportEqualsDeclaration.js (1 errors) ====
    /**
     * @satisfies {import('./types').SupportVersionTraceMap}
                          ~~~~~~~~~
!!! error TS2307: Cannot find module './types' or its corresponding type declarations.
     */
    module.exports = {};
    